--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alchemy-sdk": "^2.9.2",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.6.3",
     "freeverse-crypto-js": "1.0.7",
-    "generate-password": "^1.7.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "generate-password": "^1.7.0"
   }
 }
